--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,4 +1,4 @@
-name : 🇻🇳 Tiếng Việt
+name : 🇺🇸 English
 
 
 general_1 : "» Trả lời tin nhắn của người dùng hoặc cung cấp tên người dùng/ID người dùng."
