--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,5 +1,4 @@
-name : 🇺🇸 English
-
+name : 🇻🇳 Tiếng Việt
 
 general_1 : "» Trả lời tin nhắn của người dùng hoặc cung cấp tên người dùng/ID người dùng."
 general_2 : "» Đã xảy ra lỗi khi xử lý truy vấn của bạn.\n\nNgoại lệ : <code>{0}</code>"
@@ -337,9 +336,9 @@ gban_6 : "<b><u>ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴍớɪ ᴄʜᴏ {0} 
 gban_7 : "» {0} ᴋʜᴏ̂ɴɢ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴋʜỏɪ ʙᴏᴛ."
 gban_8 : "» đᴀɴɢ ɢỡ ʙỏ ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴄʜᴏ {0}.\n\n<b>ᴛʜờɪ ɢɪᴀɴ ᴅự ᴋɪếɴ :</b> {1}"
 gban_9 : "» đã ɢỡ ʙỏ ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴄʜᴏ {0}.\n\nđã ᴍở ᴄʜặɴ ᴛʀᴏɴɢ {1} ᴄʜᴀᴛ."
-gban_10 : "» ᴋʜᴏ̂ɴɢ ᴄó ᴀɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴋ
-gban_11 : "» ғᴇᴛᴄʜɪɴɢ ɢʙᴀɴɴᴇᴅ ᴜsᴇʀs ʟɪsᴛ..."
-gban_12 : "🙂 <b>ɢʟᴏʙᴀʟʟʏ ʙᴀɴɴᴇᴅ ᴜsᴇʀs :</b>\n\n"
+gban_10 : "» ᴋʜᴏ̂ɴɢ ᴄó ᴀɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴋʜỏɪ ʙᴏᴛ."
+gban_11 : "» đᴀɴɢ ʟấʏ ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ..."
+gban_12 : "🙂 <b>ɴɢườɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ :</b>\n\n"
 
 #Song
 SG_B_1 : "• ɴʜấɴ ᴠào đâʏ •"
