--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -210,7 +210,7 @@ H_B_2 : "Qᴜảɴ ᴛʀị"
 H_B_3 : "Xáᴄ ᴛʜựᴄ"
 H_B_4 : "Cʜặɴ ᴄʜᴀᴛ"
 H_B_5 : "Cʜặɴ ɴɢườɪ ᴅùɴɢ"
-H_B_6 : "Pʜáᴛ ᴄʜᴏ ᴄʜᴏ"
+H_B_6 : "Pʜáᴛ trong kênh"
 H_B_7 : "Tʜêᴍ"
 H_B_8 : "Cʜặɴ ɴʜóᴍ"
 H_B_9 : "Pʜáᴛ ᴛʜôɴɢ ʙáᴏ"
