--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -159,7 +159,7 @@ play_12 : "<u><b>Trình phát Apple {0}</b></u>\n\n<b>Yêu cầu bởi :</b> {1}
 play_13 : "» Phát hiện luồng trực tiếp.\n\nBạn có chắc muốn phát luồng trực tiếp này không?"
 play_14 : "Không thể lấy thông tin bài hát.\n\nHãy thử phát bài khác."
 play_15 : "» Không thể xử lý truy vấn.\n\nTôi chỉ có thể phát bài hát, album, nghệ sĩ và danh sách từ Spotify."
-play_16 : "Không có cuộc trò chuyện thoại nào đang hoạt động.\n\nĐể dùng chế độ phát cưỡng bức, cần có một cuộc thoại đang bật."
+play_16 : "Không có cuộc trò chuyện thoại nào đang hoạt động.\n\nĐể dùng chế độ phát cưỡng chế, cần cấp quyền mở cuộc thoại cho trợ lý bot."
 play_17 : "Vui lòng bật video chat, tôi không thể phát luồng từ URL nếu chưa bật."
 play_18 : "<b>Cách dùng :</b> /play [tên bài hát/YouTube URL/phản hồi tệp âm thanh hoặc video]"
 play_19 : "Danh sách đã xếp hàng :"
