--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -189,174 +189,189 @@ stream_2 : "➲ <b>Đã bắt đầu phát |</b>\n\n<b>‣ Loại luồng :</b> 
 
 
 
-S_B_1 : "˹ʙắᴛ ᴄóᴄ ᴛôɪ ᴅɪ ʙᴀʙᴇs˼"
-S_B_2 : "🍂 ᴋêɴʜ 🍂"
-S_B_3 : "ᴛʀợ ɢɪúᴘ & ʟệɴʜ ❓"
-S_B_4 : "❄️ʜỗ ᴛʀợ❄️"
-S_B_5 : "💗 ᴍã ɴɢᴜồɴ 💗"
-S_B_6 : "ʏᴏᴜᴛᴜʙᴇ"
-S_B_7 : "ʟᴀᴘ ᴛʀɪɴʜ ᴠɪêɴ ᴄʜứɴɢ ɴʜậɴ ✔︎"
+S_B_1 : "˹Bắt cóc tôi đi babe˼"
+S_B_2 : "🍂 Kênh 🍂"
+S_B_3 : "Trợ giúp & Lệnh ❓"
+S_B_4 : "❄️Hỗ trợ❄️"
+S_B_5 : "💗 Mã nguồn 💗"
+S_B_6 : "YouTube"
+S_B_7 : "Chủ bot ✔︎"
 
-CLOSE_BUTTON : "๏ Đóɴɢ ๏"
-BACK_BUTTON : "๏ Qᴜᴀʏ ʟᴀ̣ɪ ๏"
+CLOSE_BUTTON  : "๏ Đóng ๏"
+BACK_BUTTON   : "๏ Quay lại ๏"
 
-S_B_M : ">📂 ᴠᴜɪ ʟòɴɢ ᴄʜọɴ ᴍộᴛ ᴄʜᴜʏêɴ ᴍụᴄ để ᴋʜᴀᴍ ᴘʜá ᴍᴇɴᴜ ᴘʜụ & ᴛɪ̀ᴍ ʜɪểᴜ ᴛʜêᴍ ᴄáᴄ ᴛùʏ ᴄʜọɴ"
+S_B_M : ">📂 Vui lòng chọn một danh mục để khám phá menu phụ & tìm thêm tùy chọn"
 
-H_B_S_1 : "ᴛʀᴜʏềɴ ᴛʜôɴɢ"
-H_B_S_2 : "ᴛʀừ ᴘʜạᴛ"
+H_B_S_1 : "Thăng chức "
+H_B_S_2 : "Trừng phạt  "
 
-H_B_1 : "Hàɴʜ ᴅộɴɢ"
-H_B_2 : "Qᴜảɴ ᴛʀị"
-H_B_3 : "Xáᴄ ᴛʜựᴄ"
-H_B_4 : "Cʜặɴ ᴄʜᴀᴛ"
-H_B_5 : "Cʜặɴ ɴɢườɪ ᴅùɴɢ"
-H_B_6 : "Pʜáᴛ trong kênh"
-H_B_7 : "Tʜêᴍ"
-H_B_8 : "Cʜặɴ ɴʜóᴍ"
-H_B_9 : "Pʜáᴛ ᴛʜôɴɢ ʙáᴏ"
-H_B_10 : "Tʀò ᴄʜơɪ"
-H_B_11 : "Gᴘᴛ"
-H_B_12 : "Tʜôɴɢ ᴛɪɴ"
-H_B_13 : "Hìɴʜ ảɴʜ"
-H_B_14 : "Nʜậᴛ ᴋý"
-H_B_15 : "Lặᴘ ʟạɪ"
-H_B_16 : "Nʜóᴍ"
-H_B_17 : "Mᴀꜱᴛɪ"
-H_B_18 : "Hàɴʜ ᴅộɴɢ ʜàɴɢ ʟᴏạᴛ"
-H_B_19 : "Pɪɴɢ"
-H_B_20 : "Pʜáᴛ"
-H_B_21 : "Tʜôɴɢ ᴛɪɴ ʀᴇᴘᴏ"
-H_B_22 : "Tɪ̀ᴍ ᴋɪếᴍ"
-H_B_23 : "Tɪ̀ᴍ ᴋɪếᴍ ᴛʜờɪ ɢɪᴀɴ"
-H_B_24 : "Xáᴏ ᴛʀộɴ"
-H_B_25 : "Bàɪ ʜáᴛ"
-H_B_26 : "Tốᴄ ᴅộ"
-H_B_27 : "Nʜãɴ ᴅáɴ"
-H_B_28 : "Tʜẻ ᴛấᴛ ᴄả"
-H_B_29 : "Cʜɪɴʜ sỬᴀ ᴠăɴ ʙảɴ"
+# HELP BUTTONS
+H_B_1  : "Hành động"
+H_B_2  : "Quản trị viên"
+H_B_3  : "Xác thực"
+H_B_4  : "Chặn trò chuyện"
+H_B_5  : "Chặn người dùng"
+H_B_6  : "Phát C"
+H_B_7  : "Tiện ích"
+H_B_8  : "Cấm toàn cầu"
+H_B_9  : "Gửi toàn cầu"
+H_B_10 : "Trò chơi"
+H_B_11 : "GPT"
+H_B_12 : "Thông tin"
+H_B_13 : "Hình ảnh"
+H_B_14 : "Nhật ký"
+H_B_15 : "Lặp lại"
+H_B_16 : "Nhóm"
+H_B_17 : "Masti"
+H_B_18 : "Hành động hàng loạt"
+H_B_19 : "Ping"
+H_B_20 : "Phát"
+H_B_21 : "Thông tin Repo"
+H_B_22 : "Tìm kiếm"
+H_B_23 : "Tua"
+H_B_24 : "Phát ngẫu nhiên"
+H_B_25 : "Bài hát"
+H_B_26 : "Tốc độ"
+H_B_27 : "Sticker"
+H_B_28 : "Gắn thẻ tất cả"
+H_B_29 : "Chỉnh sửa văn bản"
 
-P_B_1 : "âᴍ ᴛʜᴀɴʜ"
-P_B_2 : "ᴠɪᴅᴇᴏ"
-P_B_3 : "ᴘʜáᴛ ᴛʀựᴄ ᴛɪếᴘ"
-P_B_4 : "ᴛʜᴏɴɢ ᴛʜườɴɢ"
+# PLAY BUTTONS
+P_B_1 : "Âm thanh"
+P_B_2 : "Video"
+P_B_3 : "Phát trực tiếp"
+P_B_4 : "Bình thường"
 
 
-ST_B_1 : "ɴɢườɪ ᴅùɴɢ ᴄʜᴏ ᴘʜéᴘ"
-ST_B_2 : "ᴄʜế độ ᴘʜáᴛ"
-ST_B_3 : "ɴɢôɴ ɴɢữ"
-ST_B_4 : "ᴄʜế độ ʙỏ ᴘʜɪếᴜ"
-ST_B_5 : "ʙậᴛ"
-ST_B_6 : "ᴛắᴛ"
-ST_B_7 : "ɴɢườɪ ᴅùɴɢ ᴄʜᴏ ᴘʜéᴘ ➜"
-ST_B_8 : "Qᴜảɴ ᴛʀị"
-ST_B_9 : "ᴍọɪ ɴɢườɪ"
-ST_B_10 : "ᴄʜế độ ᴛɪ̀ᴍ ᴋɪếᴍ ➜"
-ST_B_11 : "ᴛʀựᴄ ᴛɪếᴘ"
-ST_B_12 : "ɪɴʟɪɴᴇ"
-ST_B_13 : "ʟệɴʜ ᴄủᴀ Qᴜảɴ ᴛʀị ➜"
-ST_B_14 : "ᴋɪểᴜ ᴘʜáᴛ ➜"
+# SETTINGS BUTTONS
+ST_B_1  : "Người dùng được xác thực"
+ST_B_2  : "Chế độ phát"
+ST_B_3  : "Ngôn ngữ"
+ST_B_4  : "Chế độ bỏ phiếu"
+ST_B_5  : "Bật"
+ST_B_6  : "Tắt"
+ST_B_7  : "Người dùng được xác thực ➜"
+ST_B_8  : "Quản trị viên"
+ST_B_9  : "Mọi người"
+ST_B_10 : "Chế độ tìm kiếm ➜"
+ST_B_11 : "Trực tiếp"
+ST_B_12 : "Inline"
+ST_B_13 : "Lệnh quản trị ➜"
+ST_B_14 : "Kiểu phát ➜"
 
-SA_B_1 : "ᴛʜốɴɢ ᴋê ᴛᴏàɴ ʙᴏ"
-SA_B_2 : "ᴄʜᴜɴɢ"
-SA_B_3 : "ᴛᴏàɴ ʙᴏ"
+# STATS BUTTONS
+SA_B_1 : "Thống kê tổng thể"
+SA_B_2 : "Chung"
+SA_B_3 : "Tổng thể"
 
-QU_B_1 : "ʜàɴɢ đợɪ"
+# QUEUE BUTTONS
+QU_B_1 : "Hàng đợi"
 QU_B_2 : " {0} —————————— {1}"
 
-sudo_1 : "» {0} đã ᴄó ᴛʀᴏɴɢ ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ."
-sudo_2 : "» đã ᴛʜêᴍ {0} ᴠào ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ."
-sudo_3 : "» {0} ᴋʜôɴɢ ᴄó ᴛʀᴏɴɢ ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ."
-sudo_4 : "» đã ɢỡ {0} khỏi ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ."
-sudo_5 : "<u><b>🥀 ᴄʜủ sỡ ʜữᴜ :</b></u>\n"
-sudo_6 : "\n<u><b>✨ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ :</b></u>\n"
-sudo_7 : "» ᴋʜôɴɢ ᴛɪ̀ᴍ ᴛʜấʏ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ."
-sudo_8 : "ᴛʜấᴛ ʙạɪ."
+# SUDO
+sudo_1 : "» {0} đã có trong danh sách người dùng sudo."
+sudo_2 : "» Đã thêm {0} vào danh sách người dùng sudo." 
+sudo_3 : "» {0} không có trong danh sách người dùng sudo."
+sudo_4 : "» Đã xóa {0} khỏi danh sách người dùng sudo."
+sudo_5 : "<u><b>🥀 Chủ sở hữu :</b></u>\n"
+sudo_6 : "\n<u><b>✨ Người dùng sudo :</b></u>\n"
+sudo_7 : "» Không tìm thấy người dùng sudo nào."
+sudo_8 : "Thất bại."
 
-block_1 : "» {0} đã ʙị ᴄʜặɴ ᴋʜỏɪ ʙᴏᴛ."
-block_2 : "» đã ᴛʜêᴍ {0} ᴠào ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ ʙị ᴄʜặɴ."
-block_3 : "» {0} ᴋʜôɴɢ ᴄó ᴛʀᴏɴɢ ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ ʙị ᴄʜặɴ."
-block_4 : "» đã ɢỡ {0} khỏi ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ ʙị ᴄʜặɴ."
-block_5 : "» ᴋʜôɴɢ ᴛɪ̀ᴍ ᴛʜấʏ ɴɢườɪ ᴅùɴɢ ʙị ᴄʜặɴ."
-block_6 : "» đᴀɴɢ ʟấʏ ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ᴅùɴɢ ʙị ᴄʜặɴ..."
-block_7 : "<b>😫 ɴɢườɪ ᴅùɴɢ ʙị ᴄʜặɴ :</b>\n\n"
-
-
-black_1 : "<b>ᴠí ᴅụ :</b>\n\n/blacklistchat [ID ᴄʜᴀᴛ]"
-black_2 : "» ᴄʜᴀᴛ ɴàʏ đã ᴛʜᴜộᴄ ᴅᴀɴʜ sáᴄʜ ᴄʜặɴ."
-black_3 : "» ᴛʜêᴍ ᴛʜàɴʜ ᴄôɴɢ ᴠào ᴅᴀɴʜ sáᴄʜ ᴄʜặɴ."
-black_4 : "<b>ᴠí ᴅụ :</b>\n\n/whitelistchat [ID ᴄʜᴀᴛ]"
-black_5 : "» ᴄʜᴀᴛ ɴàʏ ᴋʜôɴɢ ᴛʜᴜộᴄ ᴅᴀɴʜ sáᴄʜ ᴄʜặɴ."
-black_6 : "» ɢỡ ʙỏ ᴛʜàɴʜ ᴄôɴɢ ᴋʜᴏ̉ɪ ᴅᴀɴʜ sáᴄʜ ᴄʜặɴ."
-black_7 : "» ᴅᴀɴʜ sáᴄʜ ᴄʜᴀᴛ ʙị ᴄʜặɴ :\n\n"
-black_8 : "» ᴋʜᴏ̂ɴɢ ᴄó ᴄʜᴀᴛ ʙị ᴄʜặɴ ᴛʀᴏɴɢ {0}."
-black_9 : "» ᴄó ʟỗɪ ᴘʜáᴛ sɪɴʜ."
-
-maint_1 : "<b>ᴠí ᴅụ :</b>\n/maintenance [ᴄʜᴏ ᴘʜéᴘ | ᴛắᴛ]"
-maint_2 : "» {0} đã ʙậᴛ ᴄʜế độ ʙảᴏ ᴛʀì."
-maint_3 : "» {0} đã ᴛắᴛ ᴄʜế độ ʙảᴏ ᴛʀì."
-maint_4 : "» ᴄʜế độ ʙảᴏ ᴛʀì đã ʙậᴛ ʀồɪ."
-maint_5 : "» ᴄʜế độ ʙảᴏ ᴛʀì đã ᴛắᴛ ʀồɪ."
-
-log_1 : "<b>ᴠí ᴅụ :</b>\n/logger [ᴄʜᴏ ᴘʜéᴘ | ᴛắᴛ]"
-log_2 : "Đã ʙậᴛ ɢʜɪ ʟᴏɢ."
-log_3 : "Đã ᴛắᴛ ɢʜɪ ʟᴏɢ."
-
-broad_1 : "» ʙắᴛ ᴅầᴜ ᴘʜáᴛ ᴛʜᴏɴɢ ʙáᴏ..."
-broad_2 : "<b>ᴠí ᴅụ :</b>\n\n/broadcast [ᴛɪɴ ɴʜắɴ ʜᴏặᴄ ᴛʀả ʟờɪ ᴛɪɴ ɴʜắɴ]"
-broad_3 : "» Đã ᴘʜáᴛ ᴛʜᴏɴɢ ʙáᴏ ᴛớɪ {0} ᴄʜᴀᴛ ᴠớɪ {1} ɢɪᴍ ᴛừ ʙᴏᴛ."
-broad_4 : "» Đã ᴘʜáᴛ ᴛʜᴏɴɢ ʙáᴏ ᴛớɪ {0} ɴɢườɪ ᴅùɴɢ."
-broad_5 : "» ʙắᴛ ᴅầᴜ ᴛʜᴏɴɢ ʙáᴏ ʙởi ᴛʀợ ʟý..."
-broad_6 : "➻ ᴛʜᴏɴɢ ʙáᴏ ʙởi ᴛʀợ ʟý :\n\n"
-broad_7 : "↬ ᴛʀợ ʟý {0} đã ᴘʜáᴛ ᴛʜᴏɴɢ ʙáᴏ ᴛʀᴏɴɢ {1} ᴄʜᴀᴛ."
-broad_8 : "» ᴠᴜɪ ʟòɴɢ ɴʜậᴘ ᴠăɴ ʙảɴ ᴄầɴ ᴘʜáᴛ ᴛʜᴏɴɢ ʙáᴏ."
+# BLOCK
+block_1 : "» {0} đã bị chặn khỏi bot."
+block_2 : "» Đã thêm {0} vào danh sách người dùng bị chặn."
+block_3 : "» {0} không có trong danh sách người dùng bị chặn."
+block_4 : "» Đã xóa {0} khỏi danh sách người dùng bị chặn."
+block_5 : "» Không tìm thấy người dùng bị chặn nào."
+block_6 : "» Đang lấy danh sách người dùng bị chặn..."
+block_7 : "<b>😫 Người dùng bị chặn :</b>\n\n"
 
 
-server_1 : "» ᴋʜᴏ̂ɴɢ ᴛʜể ʟấʏ ʟᴏɢs."
-server_2 : "ᴠᴜɪ ʟòɴɢ ᴅᴀᴍ ʙảᴏ ʀằɴɢ ᴋᴇʏ API ᴄủᴀ ʜᴇʀᴏᴋᴜ ᴠà ᴛêɴ ᴜɴɢ ᴅụɴɢ ᴄủᴀ ʙạɴ đã ᴄấu ʜìɴʜ ᴄʜíɴʜ xáᴄ."
-server_3 : "đᴀɴɢ ᴋɪểᴍ ᴛʀᴀ ᴄáᴄ ᴄập ɴʜậᴛ ᴄó sẵɴ..."
-server_4 : "ʟỗɪ ʟệɴʜ ɢɪᴛ."
-server_5 : "ᴋʜᴏ̂ɴɢ ᴛɪ̀ᴍ ᴛʜấʏ ᴋʜᴏ ᴅữ ʟɪệᴜ ɢɪᴛ ʜợᴘ ʟệ."
-server_6 : "» ʙᴏᴛ đã ᴄập ɴʜậᴛ ᴍớɪ ɴʜấᴛ."
-server_7 : "» ʙᴏᴛ đã ᴄập ɴʜậᴛ ᴛʜàɴʜ ᴄôɴɢ! ᴠᴜɪ ʟòɴɢ ᴄʜờ ᴠài ᴘʜúᴛ để ʙᴏᴛ ᴋʜởɪ ᴅộɴɢ ʟạɪ ᴠà đẩʏ ᴄáᴄ ᴛʜᴀʏ đổɪ!"
-server_8 : "{0} đᴀɴɢ ᴋʜởɪ ᴅộɴɢ ʟạɪ...\n\nʙạɴ ᴄó ᴛʜể ᴘʜáᴛ ʟạɪ sᴀᴜ 15-20 ɢɪâʏ."
-server_9 : "ᴄó ʟỗɪ ᴘʜáᴛ sɪɴʜ, ᴠᴜɪ ʟòɴɢ ᴋɪểᴍ ᴛʀᴀ ʟᴏɢs."
-server_10 : "ᴄó ʟỗi ᴛᴀɪ #ᴜᴩᴅᴀᴛᴇʀ ᴠì : <code>{0}</code>"
-server_11 : "» đᴀɴɢ ᴄʜạʏ ᴋɪểᴍ ᴛʀᴀ ᴛốᴄ độ..."
-server_12 : "<b>⇆ đᴀɴɢ ᴋɪểᴍ ᴛʀᴀ ᴛốᴄ độ ᴛải ᴠề...</b>"
-server_13 : "<b>⇆ đᴀɴɢ ᴋɪểᴍ ᴛʀᴀ ᴛốᴄ độ ᴛải ʟêɴ...</b>"
-server_14 : "<b>↻ đᴀɴɢ ᴄʜɪᴀ sẻ ᴋếᴛ ǫᴜả ᴋɪểᴍ ᴛʀᴀ ᴛốᴄ độ...</b>"
-server_15 : "✯ <b>ᴋếᴛ ǫᴜả ᴋɪểᴍ ᴛʀᴀ ᴛốᴄ độ</b> ✯\n\n<u><b>ᴋʜᴀᴄʜ :</b></u>\n<b>» ɪsᴩ :</b> {0}\n<b>» ᴄʜᴜɴɢ :</b> {1}\n\n<u><b>ᴍáʏ ᴄʜủ :</b></u>\n<b>» ᴛêɴ :</b> {2}\n<b>» ᴄʜᴜɴɢ :</b> {3}, {4}\n<b>» ᴛàɪ ᴛʀợ :</b> {5}\n<b>» độ ᴛʀễ :</b> {6}\n<b>» ᴘɪɴɢ :</b> {7}"
 
-gban_1 : "» ᴛạɪ sᴀᴏ ʙạɴ ʟạɪ ᴍᴜốɴ ᴄʜặɴ ᴄʜíɴʜ ᴍɪɴʜ ᴠậʏ ʙé?"
-gban_2 : "» ᴛạɪ sᴀᴏ ᴛôɪ ᴘʜảɪ ᴄʜặɴ ᴄʜíɴʜ ᴍɪɴʜ?"
-gban_3 : "» ʙạɴ ᴋʜᴏ̂ɴɢ ᴛʜể ᴄʜặɴ ɴɢườɪ ᴅùɴɢ sᴜᴅᴏ ᴄủᴀ ᴛôɪ."
-gban_4 : "» {0} đã ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴋʜỏɪ ʙᴏᴛ."
-gban_5 : "» đᴀɴɢ ᴋʜởɪ ᴛạᴏ ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴄʜᴏ {0}.\n\n<b>ᴛʜờɪ ɢɪᴀɴ ᴅự ᴋɪếɴ :</b> {1}"
-gban_6 : "<b><u>ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴍớɪ ᴄʜᴏ {0} :</u></b>\n\n<b>ᴋʜởɪ ᴛạᴏ ᴛừ :</b> {1} [<code>{2}</code>]\n<b>ɴɢườɪ ᴅùɴɢ :</b> {3}\n<b>ID ɴɢườɪ ᴅùɴɢ :</b> {4}\n\n<b>ʙị ᴄʜặɴ ʙởi :</b> {5}\n<b>ᴄʜᴀᴛ :</b> </code>{6}</code>"
-gban_7 : "» {0} ᴋʜᴏ̂ɴɢ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴋʜỏɪ ʙᴏᴛ."
-gban_8 : "» đᴀɴɢ ɢỡ ʙỏ ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴄʜᴏ {0}.\n\n<b>ᴛʜờɪ ɢɪᴀɴ ᴅự ᴋɪếɴ :</b> {1}"
-gban_9 : "» đã ɢỡ ʙỏ ʟệɴʜ ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴄʜᴏ {0}.\n\nđã ᴍở ᴄʜặɴ ᴛʀᴏɴɢ {1} ᴄʜᴀᴛ."
-gban_10 : "» ᴋʜᴏ̂ɴɢ ᴄó ᴀɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ ᴋʜỏɪ ʙᴏᴛ."
-gban_11 : "» đᴀɴɢ ʟấʏ ᴅᴀɴʜ sáᴄʜ ɴɢườɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ..."
-gban_12 : "🙂 <b>ɴɢườɪ ʙị ᴄʜặɴ ᴛᴏàɴ ᴄầᴜ :</b>\n\n"
+# BLACKLIST CHAT
+black_1 : "<b>Ví dụ :</b>\n\n/blacklistchat [ID chat]"
+black_2 : "» Chat này đã bị đưa vào danh sách đen."
+black_3 : "» Đã thêm vào danh sách đen các chat."
+black_4 : "<b>Ví dụ :</b>\n\n/whitelistchat [ID chat]"
+black_5 : "» Chat này không nằm trong danh sách đen."
+black_6 : "» Đã xóa khỏi danh sách đen các chat."
+black_7 : "» Danh sách các chat bị đưa vào danh sách đen :\n\n"
+black_8 : "» Không có chat nào bị đưa vào danh sách đen trên {0}."
+black_9 : "» Đã xảy ra lỗi."
 
-#Song
-SG_B_1 : "• ɴʜấɴ ᴠào đâʏ •"
-SG_B_2 : "🎧 ᴀᴍ ᴛʜᴀɴʜ 🎧"
-SG_B_3 : "🎥 ᴠɪᴅᴇᴏ 🎥"
+# MAINTENANCE
+maint_1 : "<b>Ví dụ :</b>\n/maintenance [bật | tắt]"
+maint_2 : "» {0} chế độ bảo trì đã bật."
+maint_3 : "» {0} chế độ bảo trì đã tắt."
+maint_4 : "» Chế độ bảo trì đã được bật trước đó."
+maint_5 : "» Chế độ bảo trì đã được tắt trước đó."
+
+# LOGGER
+log_1 : "<b>Ví dụ :</b>\n/logger [bật | tắt]"
+log_2 : "Đã bật ghi log."
+log_3 : "Đã tắt ghi log."
+
+# BROADCAST
+broad_1 : "» Đã bắt đầu phát tin nhắn..."
+broad_2 : "<b>Ví dụ :</b>\n\n/broadcast [nội dung tin nhắn hoặc trả lời một tin nhắn]"
+broad_3 : "» Đã phát tin nhắn tới {0} chat với {1} ghim từ bot."
+broad_4 : "» Đã phát tin nhắn tới {0} người dùng."
+broad_5 : "» Đang bắt đầu phát trợ lý..."
+broad_6 : "➻ Phát trợ lý :\n\n"
+broad_7 : "↬ Trợ lý {0} đã phát trong {1} chat."
+broad_8 : "» Vui lòng cung cấp nội dung để phát."
+
+
+
+# SERVER
+server_1 : "» Không thể lấy log."
+server_2 : "Vui lòng đảm bảo rằng Heroku API Key và tên App của bạn được cấu hình chính xác."
+server_3 : "Đang kiểm tra bản cập nhật khả dụng..."
+server_4 : "Lỗi lệnh git."
+server_5 : "Kho git không hợp lệ."
+server_6 : "» Bot đã được cập nhật mới nhất."
+server_7 : "» Bot đã cập nhật thành công! Bây giờ hãy chờ vài phút để bot khởi động lại và áp dụng thay đổi!"
+server_8 : "{0} đang khởi động lại...\n\nBạn có thể bắt đầu phát lại sau 15-20 giây."
+server_9 : "Đã xảy ra sự cố, vui lòng kiểm tra log."
+server_10 : "Đã xảy ra ngoại lệ tại #updater do : <code>{0}</code>"
+server_11 : "» Đang chạy speedtest..."
+server_12 : "<b>⇆ Đang chạy speedtest tải xuống...</b>"
+server_13 : "<b>⇆ Đang chạy speedtest tải lên...</b>"
+server_14 : "<b>↻ Đang chia sẻ kết quả speedtest...</b>"
+server_15 : "✯ <b>Kết quả speedtest</b> ✯\n\n<u><b>Client :</b></u>\n<b>» ISP :</b> {0}\n<b>» Quốc gia :</b> {1}\n\n<u><b>Server :</b></u>\n<b>» Tên :</b> {2}\n<b>» Quốc gia :</b> {3}, {4}\n<b>» Nhà tài trợ :</b> {5}\n<b>» Độ trễ :</b> {6}\n<b>» Ping :</b> {7}"
+
+# GBAN (Cấm toàn cầu)
+gban_1 : "» Sao bạn lại muốn tự cấm toàn cầu chính mình vậy ?"
+gban_2 : "» Tại sao tôi phải tự cấm toàn cầu mình chứ ?"
+gban_3 : "» Bạn không thể cấm toàn cầu các sudoer của tôi."
+gban_4 : "» {0} đã bị cấm toàn cầu khỏi bot rồi."
+gban_5 : "» Đang khởi tạo lệnh cấm toàn cầu trên {0}.\n\n<b>Thời gian dự kiến :</b> {1}"
+gban_6 : "<b><u>Lệnh cấm toàn cầu mới trên {0} :</u></b>\n\n<b>Bắt nguồn từ :</b> {1} [<code>{2}</code>]\n<b>Người dùng :</b> {3}\n<b>ID người dùng :</b> {4}\n\n<b>Bị cấm bởi :</b> {5}\n<b>Trong các chat :</b> </code>{6}</code>"
+gban_7 : "» {0} không bị cấm toàn cầu khỏi bot."
+gban_8 : "» Đang gỡ lệnh cấm toàn cầu khỏi {0}.\n\n<b>Thời gian dự kiến :</b> {1}"
+gban_9 : "» Đã gỡ lệnh cấm toàn cầu khỏi {0}.\n\nĐã được gỡ cấm trong {1} chat."
+gban_10 : "» Không có ai bị cấm toàn cầu khỏi bot."
+gban_11 : "» Đang lấy danh sách người dùng bị cấm toàn cầu..."
+gban_12 : "🙂 <b>Người dùng bị cấm toàn cầu :</b>\n\n"
 
 # Song
-song_1 : "ʙạɴ ᴄó ᴛʜể ᴛảɪ ɴʜạᴄ ʜᴏặᴄ ᴠɪᴅᴇᴏ ᴛừ Yᴏᴜᴛᴜʙᴇ ᴄʜỉ ᴛʀᴏɴɢ ᴄʜᴀᴛ ᴄá ɴʜâɴ. ᴠᴜɪ ʟòɴɢ ʙắᴛ đầᴜ ᴛôɪ ᴛʀᴏɴɢ ᴄʜᴀᴛ ᴄá ɴʜâɴ."
-song_2 : "**ᴄáᴄʜ ᴅùɴɢ:**\n\n/song [ᴛêɴ ʙàɪ ʜáᴛ] ʜᴏặᴄ [ʟɪɴᴋ Yᴏᴜᴛᴜʙᴇ]"
-song_3 : "ᴅã ᴘʜáᴛ ʜɪệɴ ʟɪɴᴋ ᴛʀựᴄ ᴛɪếᴘ. ᴛôɪ ᴋʜᴏ̂ɴɢ ᴛʜể ᴛảɪ ᴠɪᴅᴇᴏ Yᴏᴜᴛᴜʙᴇ ᴛʀựᴄ ᴛɪếᴘ."
-song_4 : "📌**ᴛɪêᴜ ᴅề**:- {0}\n\nʜãʏ ᴄʜọɴ ᴋɪểᴜ ᴛảɪ ᴍà ʙạɴ ᴍᴜốɴ."
-song_5 : "ᴋʜᴏ̂ɴɢ ᴘʜảɪ ʟɪɴᴋ Yᴏᴜᴛᴜʙᴇ ʜợᴘ ʟệ."
-song_6 : "đᴀɴɢ ʟấʏ ᴅạɴɢ...\n\nᴠᴜɪ ʟòɴɢ ᴄʜờ..."
-song_7 : "ᴋʜᴏ̂ɴɢ ᴛʜể ʟấʏ ᴄáᴄ ᴅạɴɢ ᴄó sẵɴ ᴄủᴀ ᴠɪᴅᴇᴏ. ᴠᴜɪ ʟòɴɢ ᴛʜử ʙàɪ ᴋʜáᴄ."
-song_8 : "ʙắᴛ đầᴜ ᴛảɪ ᴠề\n\nᴠᴜɪ ʟòɴɢ ᴄʜờ ᴠài ɢɪâʏ..."
-song_9 : "ᴋʜᴏ̂ɴɢ ᴛʜể ᴛảɪ ʙàɪ ʜáᴛ ᴛừ yt-dl\n\n**ʟý ᴅᴏ:** {0}"
-song_10 : "ᴋʜᴏ̂ɴɢ ᴛʜể ᴛải ʟêɴ ᴍáʏ ᴄʜủ ᴛᴇʟᴇɢʀᴀᴍ."
-song_11 : "ʙắᴛ đầᴜ ᴛải ʟêɴ ʙé ơi\n\nᴠᴜɪ ʟòɴɢ ᴄʜờ ᴍộᴛ ᴄʜúᴛ..."
+SG_B_1 : "• Bấm vào đây •"
+SG_B_2 : "🎧 Âm thanh 🎧"
+SG_B_3 : "🎥 Video 🎥"
+
+# Song
+song_1 : "Bạn chỉ có thể tải nhạc hoặc video từ YouTube trong cuộc trò chuyện riêng tư. Vui lòng bắt đầu với tôi trong trò chuyện riêng tư."
+song_2 : "**Cách dùng:**\n\n/song [tên nhạc] hoặc [link YouTube]"
+song_3 : "Phát trực tiếp được phát hiện. Tôi không thể tải xuống video YouTube đang phát trực tiếp."
+song_4 : "📌**Tiêu đề**:- {0}\n\nChọn định dạng bạn muốn tải xuống."
+song_5 : "Liên kết YouTube không hợp lệ."
+song_6 : "Đang lấy định dạng...\n\nVui lòng chờ..."
+song_7 : "Không thể lấy các định dạng khả dụng cho video này. Vui lòng thử bản nhạc khác."
+song_8 : "Bắt đầu tải xuống\n\nVui lòng chờ vài giây..."
+song_9 : "Không thể tải bài hát từ yt-dl\n\n**Lý do:** {0}"
+song_10 : "Không thể tải lên máy chủ Telegram."
+song_11 : "Bắt đầu tải lên\n\nVui lòng chờ..."
 
 # Private Bot Mode
 pbot_1: "**CÁCH DÙNG:**\n/authorize [CHAT_ID]"
